fix(custom): 修复模板操作按钮不显示

--- a/src/i18n/lang/index.json
+++ b/src/i18n/lang/index.json
@@ -33521,7 +33521,7 @@
 	},
 	"gr2h3": {
 		"zh-cn": " 导入",
-		"en": "\"Import",
+		"en": "Import",
 		"zh-tw": "導入"
 	},
 	"s0mq867": {
@@ -33731,7 +33731,7 @@
 	},
 	"g469w4": {
 		"zh-cn": " 显示 ",
-		"en": "\"Display",
+		"en": "Display",
 		"zh-tw": "顯示"
 	},
 	"n93tt4": {
@@ -33996,7 +33996,7 @@
 	},
 	"j57pz4": {
 		"zh-cn": " 移除 ",
-		"en": "\"Remove",
+		"en": "Remove",
 		"zh-tw": "移除"
 	},
 	"gr6m3": {
@@ -34361,7 +34361,7 @@
 	},
 	"zaknla6": {
 		"zh-cn": " 小程序码 ",
-		"en": "\"Mini Program code\"",
+		"en": "Mini Program code",
 		"zh-tw": "小程序碼"
 	},
 	"bjd62c5": {
@@ -34496,7 +34496,7 @@
 	},
 	"h2eu34": {
 		"zh-cn": " 添加 ",
-		"en": "\"Add",
+		"en": "Add",
 		"zh-tw": "添加"
 	},
 	"lq3q697": {
@@ -34551,7 +34551,7 @@
 	},
 	"gihr8f8": {
 		"zh-cn": " 添加满赠促销 ",
-		"en": "Add the \"Get a free gift\" promotion",
+		"en": "Add the Get a free gift promotion",
 		"zh-tw": "添加滿贈促銷"
 	},
 	"ham9c4": {
@@ -34586,7 +34586,7 @@
 	},
 	"fn3854": {
 		"zh-cn": " 拒绝 ",
-		"en": "\"Refuse",
+		"en": "Refuse",
 		"zh-tw": "拒絕"
 	},
 	"du2tyo5": {
@@ -34716,7 +34716,7 @@
 	},
 	"1fdkl76": {
 		"zh-cn": " 件，给予 ",
-		"en": "\"Piece, given",
+		"en": "Piece, given",
 		"zh-tw": "件，給予"
 	},
 	"loben4": {
@@ -34741,7 +34741,7 @@
 	},
 	"dq2c115": {
 		"zh-cn": "件，给予 ",
-		"en": "\"Piece, given",
+		"en": "Piece, given",
 		"zh-tw": "件，給予"
 	},
 	"fk8s04": {
@@ -34886,7 +34886,7 @@
 	},
 	"vts2ym6": {
 		"zh-cn": " 审核拒绝 ",
-		"en": "\"Review rejection",
+		"en": "Review rejection",
 		"zh-tw": "審覈拒絕"
 	},
 	"bzssl67": {
@@ -34926,7 +34926,7 @@
 	},
 	"givl1z6": {
 		"zh-cn": " AI创作 ",
-		"en": "\"AI creation",
+		"en": "AI creation",
 		"zh-tw": "AI創作"
 	},
 	"17u7wk7": {
@@ -35021,7 +35021,7 @@
 	},
 	"2c67b88": {
 		"zh-cn": "  元可用   ",
-		"en": "\"Yuan available",
+		"en": "Yuan available",
 		"zh-tw": "元可用"
 	},
 	"busanv6": {
@@ -35211,7 +35211,7 @@
 	},
 	"d8bz54": {
 		"zh-cn": " 加盟 ",
-		"en": "\"Join",
+		"en": "Join",
 		"zh-tw": "加盟"
 	},
 	"k7y054": {
@@ -35291,7 +35291,7 @@
 	},
 	"evj244": {
 		"zh-cn": " 废弃 ",
-		"en": "\"Abandoned\"",
+		"en": "Abandoned",
 		"zh-tw": "廢棄"
 	},
 	"za33p87": {
@@ -35331,7 +35331,7 @@
 	},
 	"mcqer4": {
 		"zh-cn": " 通过 ",
-		"en": "\"Through",
+		"en": "Through",
 		"zh-tw": "通過"
 	},
 	"nlm6t4": {
@@ -35361,12 +35361,12 @@
 	},
 	"f5g9y3": {
 		"zh-cn": "撤回 ",
-		"en": "\"Withdraw\"",
+		"en": "Withdraw",
 		"zh-tw": "撤回"
 	},
 	"cpyby3": {
 		"zh-cn": "发布 ",
-		"en": "\"Publish",
+		"en": "Publish",
 		"zh-tw": "發佈"
 	},
 	"cqmho3": {
@@ -35401,7 +35401,7 @@
 	},
 	"iewc84": {
 		"zh-cn": " 的投诉",
-		"en": "\"Complaint",
+		"en": "Complaint",
 		"zh-tw": "的投訴"
 	},
 	"bggqc55": {
@@ -35531,7 +35531,7 @@
 	},
 	"ef93h4": {
 		"zh-cn": " 对公 ",
-		"en": "\"Corporate\"",
+		"en": "Corporate",
 		"zh-tw": "對公"
 	},
 	"em42g4": {
@@ -35541,7 +35541,7 @@
 	},
 	"h2xxz85": {
 		"zh-cn": "入驻信息 ",
-		"en": "\"Entry information",
+		"en": "Entry information",
 		"zh-tw": "入駐信息"
 	},
 	"766l3o5": {
@@ -35756,7 +35756,7 @@
 	},
 	"m0d1q4": {
 		"zh-cn": " 达到 ",
-		"en": "\"Reach",
+		"en": "Reach",
 		"zh-tw": "達到"
 	},
 	"efu644": {
@@ -35871,12 +35871,12 @@
 	},
 	"m0c7l4": {
 		"zh-cn": " 返佣 ",
-		"en": "\"Rebate",
+		"en": "Rebate",
 		"zh-tw": "返傭"
 	},
 	"wou0vq1a": {
 		"zh-cn": " 如果设置的返佣为固定金额，返佣金额就是设置的固定金额。否则按照 【返佣计算类型】计算返佣 ",
-		"en": "If the set rebate is a fixed amount, the rebate commission amount will be the fixed amount set. Otherwise, the rebate will be calculated according to the \"Rebate Calculation Type\"",
+		"en": "If the set rebate is a fixed amount, the rebate commission amount will be the fixed amount set. Otherwise, the rebate will be calculated according to the Rebate Calculation Type",
 		"zh-tw": "如果設置的返傭爲固定金額，返佣金額就是設置的固定金額。否則按照 【返傭計算類型】計算返傭"
 	},
 	"dtn6qak": {
@@ -35941,7 +35941,7 @@
 	},
 	"mm5phn6y": {
 		"zh-cn": " 需填写姓名请选择字符username、生日为birthday、 身份证号码为idcard、手机号码为mobile、银行卡号为bankcard、地址为address、 公司名称为Company name、统一社会信用代码为Unified Social Credit Code、出席人身份证号为Attendance IDCard、帐号为account number、 类型为type、提示信息为Reminder information、上传附件为Attachment upload，若都不是，选其他。 ",
-		"en": "To fill in the name, please select the characters username, birthday, ID number idcard, mobile phone number bankcard, address, Company name company, and Unified social credit code unified Social Credit Code: The ID number of the attendee is Attendance ID card, the account number is account number, the type is Type, the prompt information is Reminder information, and the uploaded Attachment is attachment upload. If none of these are available, choose \"Others\".",
+		"en": "To fill in the name, please select the characters username, birthday, ID number idcard, mobile phone number bankcard, address, Company name company, and Unified social credit code unified Social Credit Code: The ID number of the attendee is Attendance ID card, the account number is account number, the type is Type, the prompt information is Reminder information, and the uploaded Attachment is attachment upload. If none of these are available, choose Others.",
 		"zh-tw": "需填寫姓名請選擇字符username、生日爲birthday、 身份證號碼爲idcard、手機號碼爲mobile、銀行卡號爲bankcard、地址爲address、 公司名稱爲Company name、統一社會信用代碼爲Unified Social Credit Code、出席人身份證號爲Attendance IDCard、帳號爲account number、 類型爲type、提示信息爲Reminder information、上傳附件爲Attachment upload，若都不是，選其他。"
 	},
 	"57d56d6": {
@@ -35981,7 +35981,7 @@
 	},
 	"m4r284": {
 		"zh-cn": " 选择 ",
-		"en": "\"Choose\"",
+		"en": "Choose",
 		"zh-tw": "選擇"
 	},
 	"8l4fa51j": {
@@ -35991,12 +35991,12 @@
 	},
 	"ej76h4": {
 		"zh-cn": " 小时 ",
-		"en": "\"Hour",
+		"en": "Hour",
 		"zh-tw": "小時"
 	},
 	"6o0jvp1p": {
 		"zh-cn": " (开启成团机器人后，成团时效内人数未满的团，系统将会使用机器人凑满人数，使该团成团。商家只需对真实订单进行发货处理。) ",
-		"en": "After the group-forming robot is activated, if the number of people in a group does not reach the limit within the group-forming period, the system will use the robot to make up the number of people and complete the group. Merchants only need to handle the shipment of real orders.\"",
+		"en": "After the group-forming robot is activated, if the number of people in a group does not reach the limit within the group-forming period, the system will use the robot to make up the number of people and complete the group. Merchants only need to handle the shipment of real orders.",
 		"zh-tw": "(開啓成團機器人後，成團時效內人數未滿的團，系統將會使用機器人湊滿人數，使該團成團。商家只需對真實訂單進行發貨處理。)"
 	},
 	"vuv2l1g": {
@@ -36146,22 +36146,22 @@
 	},
 	"phvl3": {
 		"zh-cn": " 赠送",
-		"en": "\"Gift\"",
+		"en": "Gift",
 		"zh-tw": "贈送"
 	},
 	"dlrfl6": {
 		"zh-cn": " 】优惠券 ",
-		"en": "\"Coupon\"",
+		"en": "Coupon",
 		"zh-tw": "】優惠券"
 	},
 	"lynov4": {
 		"zh-cn": " 赠送【",
-		"en": "\"Gift",
+		"en": "Gift",
 		"zh-tw": "贈送【"
 	},
 	"f3l8jl7": {
 		"zh-cn": " 】 优惠券 ",
-		"en": "\"Coupon\"",
+		"en": "Coupon",
 		"zh-tw": "】 優惠券"
 	},
 	"ay3j6p9": {
@@ -36171,7 +36171,7 @@
 	},
 	"kkovv38": {
 		"zh-cn": " 】服务类商品 ",
-		"en": "\"Service-oriented goods.",
+		"en": "Service-oriented goods.",
 		"zh-tw": "】服務類商品"
 	},
 	"dhuqvpb": {
@@ -36241,12 +36241,12 @@
 	},
 	"41flcz6": {
 		"zh-cn": " 直接发布 ",
-		"en": "\"Publish directly",
+		"en": "Publish directly",
 		"zh-tw": "直接發佈"
 	},
 	"cw3ec4": {
 		"zh-cn": " 停用 ",
-		"en": "\"Deactivated\"",
+		"en": "Deactivated",
 		"zh-tw": "停用"
 	},
 	"g85dku5": {
@@ -36321,7 +36321,7 @@
 	},
 	"chklw4": {
 		"zh-cn": " 上架 ",
-		"en": "\"Listed",
+		"en": "Listed",
 		"zh-tw": "上架"
 	},
 	"k4iqbb1w": {
@@ -36396,7 +36396,7 @@
 	},
 	"en6w3": {
 		"zh-cn": " 优惠",
-		"en": "\"Discount",
+		"en": "Discount",
 		"zh-tw": "優惠"
 	},
 	"dl1zp45": {
@@ -36451,12 +36451,12 @@
 	},
 	"cdzcg4": {
 		"zh-cn": " 个人 ",
-		"en": "\"Personal",
+		"en": "Personal",
 		"zh-tw": "個人"
 	},
 	"cw1v84": {
 		"zh-cn": " 公司 ",
-		"en": "\"Company",
+		"en": "Company",
 		"zh-tw": "公司"
 	},
 	"g56yu4": {
@@ -36596,12 +36596,12 @@
 	},
 	"fpvuu4": {
 		"zh-cn": " 撤回 ",
-		"en": "\"Withdraw\"",
+		"en": "Withdraw",
 		"zh-tw": "撤回"
 	},
 	"dadwu4": {
 		"zh-cn": " 发布 ",
-		"en": "\"Publish",
+		"en": "Publish",
 		"zh-tw": "發佈"
 	},
 	"i44d3": {
@@ -36666,7 +36666,7 @@
 	},
 	"jyavp4": {
 		"zh-cn": " 置项 ",
-		"en": "\"Item\"",
+		"en": "Item",
 		"zh-tw": "置項"
 	},
 	"ejnu8sm": {
@@ -36761,7 +36761,7 @@
 	},
 	"evooh4": {
 		"zh-cn": " 开启 ",
-		"en": "\"Start\"",
+		"en": "Start",
 		"zh-tw": "開啓"
 	},
 	"apziog8": {
@@ -36841,12 +36841,12 @@
 	},
 	"eyp874": {
 		"zh-cn": " 延期 ",
-		"en": "\"Extension",
+		"en": "Extension",
 		"zh-tw": "延期"
 	},
 	"m8g6b4": {
 		"zh-cn": " 转让 ",
-		"en": "\"Transfer",
+		"en": "Transfer",
 		"zh-tw": "轉讓"
 	},
 	"gaj8z4": {
@@ -36911,7 +36911,7 @@
 	},
 	"h99slj5": {
 		"zh-cn": " 自定义 ",
-		"en": "\"Custom\"",
+		"en": "Custom",
 		"zh-tw": "自定義"
 	},
 	"mygmwf6": {
@@ -36966,7 +36966,7 @@
 	},
 	"d4id64": {
 		"zh-cn": " 包含 ",
-		"en": "\"Included",
+		"en": "Included",
 		"zh-tw": "包含"
 	},
 	"aojuod5": {
@@ -37056,7 +37056,7 @@
 	},
 	"fkqoz4": {
 		"zh-cn": " 提前 ",
-		"en": "\"Advance",
+		"en": "Advance",
 		"zh-tw": "提前"
 	},
 	"esb631a": {
@@ -37116,7 +37116,7 @@
 	},
 	"mg9y74": {
 		"zh-cn": " 配置 ",
-		"en": "\"Configuration\"",
+		"en": "Configuration",
 		"zh-tw": "配置"
 	},
 	"grrc2": {
@@ -37161,7 +37161,7 @@
 	},
 	"sisg387": {
 		"zh-cn": " 小程序配置 ",
-		"en": "\"Mini Program configuration",
+		"en": "Mini Program configuration",
 		"zh-tw": "小程序配置"
 	},
 	"dwy50e9": {
@@ -37211,7 +37211,7 @@
 	},
 	"2aw9aed": {
 		"zh-cn": " 快递100实时快递查询 ",
-		"en": "\"Express 100 Real-time express delivery inquiry.",
+		"en": "Express 100 Real-time express delivery inquiry.",
 		"zh-tw": "快遞100實時快遞查詢"
 	},
 	"1wnroc6": {
@@ -37426,7 +37426,7 @@
 	},
 	"d2slw75": {
 		"zh-cn": " 推 送 ",
-		"en": "\"Push and send",
+		"en": "Push and send",
 		"zh-tw": "推 送"
 	},
 	"hg9np4": {
@@ -37601,12 +37601,12 @@
 	},
 	"bksgyk5": {
 		"zh-cn": " 去绑定 ",
-		"en": "\"Go binding",
+		"en": "Go binding",
 		"zh-tw": "去綁定"
 	},
 	"luterf1d": {
 		"zh-cn": " 推广短信由 [签名+模板] 组成，当前场景仅支持「推广短信」类型的模板，如需添加模板：点这里。 ",
-		"en": "The promotional text message consists of [signature + template]. Currently, only the \"promotional text message\" type template is supported in the scene. If you need to add a template: click here.",
+		"en": "The promotional text message consists of [signature + template]. Currently, only the promotional text message type template is supported in the scene. If you need to add a template: click here.",
 		"zh-tw": "推廣短信由 [簽名+模板] 組成，當前場景僅支持「推廣短信」類型的模板，如需添加模板：點這裏。"
 	},
 	"om71s0c": {
@@ -37635,9 +37635,9 @@
 		"zh-tw": "推廣短信（0.055元 / 條）"
 	},
 	"oammbc2c": {
-		"zh-cn": " 短信字数含 \" 签名 + 模版内容 + 变量内容”，短信 70 个字数含以内，按 1 条短信计费；超出 70 个字为长短信，按照 67 个字数记为 1 条短信费用。 ",
-		"en": "The word count of a text message includes \"signature + template content + variable content\". If the text message is within 70 characters, it will be charged as one text message. Messages exceeding 70 characters are considered long or short messages and are charged as one text message with 67 characters.",
-		"zh-tw": "短信字數含 \" 簽名 + 模版內容 + 變量內容”，短信 70 個字數含以內，按 1 條短信計費；超出 70 個字爲長短信，按照 67 個字數記爲 1 條短信費用。"
+		"zh-cn": " 短信字数含  签名 + 模版内容 + 变量内容”，短信 70 个字数含以内，按 1 条短信计费；超出 70 个字为长短信，按照 67 个字数记为 1 条短信费用。 ",
+		"en": "The word count of a text message includes signature + template content + variable content. If the text message is within 70 characters, it will be charged as one text message. Messages exceeding 70 characters are considered long or short messages and are charged as one text message with 67 characters.",
+		"zh-tw": "短信字數含  簽名 + 模版內容 + 變量內容”，短信 70 個字數含以內，按 1 條短信計費；超出 70 個字爲長短信，按照 67 個字數記爲 1 條短信費用。"
 	},
 	"5lw7jiy": {
 		"zh-cn": " 短信服务的模板都需要经过审核，审核通过后才可以使用该模板，请参见 ",
@@ -38236,7 +38236,7 @@
 	},
 	"itoyb4": {
 		"zh-cn": " 移动 ",
-		"en": "\"Mobile\"",
+		"en": "Mobile",
 		"zh-tw": "移動"
 	},
 	"ff4aoa8": {
@@ -38416,7 +38416,7 @@
 	},
 	"dyz4u4": {
 		"zh-cn": " 回退 ",
-		"en": "\"Back\"",
+		"en": "Back",
 		"zh-tw": "回退"
 	},
 	"xe4q666": {
@@ -38446,7 +38446,7 @@
 	},
 	"lmys04": {
 		"zh-cn": " 设置 ",
-		"en": "\"Settings",
+		"en": "Settings",
 		"zh-tw": "設置"
 	},
 	"yosrys9": {
@@ -38526,7 +38526,7 @@
 	},
 	"gsxi14": {
 		"zh-cn": " 小时 ",
-		"en": "\"Hour",
+		"en": "Hour",
 		"zh-tw": "小時"
 	},
 	"uczex81g": {
@@ -38561,7 +38561,7 @@
 	},
 	"bwioq3": {
 		"zh-cn": "元) ",
-		"en": "\"Yuan",
+		"en": "Yuan",
 		"zh-tw": "元)"
 	},
 	"qwlfx16": {
@@ -38591,7 +38591,7 @@
 	},
 	"jtid3": {
 		"zh-cn": " 添加",
-		"en": "\"Add",
+		"en": "Add",
 		"zh-tw": "添加"
 	},
 	"cqh6m75": {
@@ -38641,7 +38641,7 @@
 	},
 	"voqx6": {
 		"zh-cn": " 发布已选 ",
-		"en": "\"Publish selected\"",
+		"en": "Publish selected",
 		"zh-tw": "發佈已選"
 	},
 	"ldi5b66": {
@@ -38806,7 +38806,7 @@
 	},
 	"clx4z15": {
 		"zh-cn": " 小程序 ",
-		"en": "\"Mini Program",
+		"en": "Mini Program",
 		"zh-tw": "小程序"
 	},
 	"9d74id8": {
@@ -38821,7 +38821,7 @@
 	},
 	"iw8og55": {
 		"zh-cn": " 重 置 ",
-		"en": "\"Reset",
+		"en": "Reset",
 		"zh-tw": "重 置"
 	},
 	"1tqo7t6": {
@@ -38871,7 +38871,7 @@
 	},
 	"d4nd54": {
 		"zh-cn": " 允许 ",
-		"en": "\"Allowed",
+		"en": "Allowed",
 		"zh-tw": "允許"
 	},
 	"ciaxz4": {
@@ -38901,7 +38901,7 @@
 	},
 	"gw9ilo6": {
 		"zh-cn": " H5链接 ",
-		"en": "\"H5 Link",
+		"en": "H5 Link",
 		"zh-tw": "H5鏈接"
 	},
 	"bnfdzq5": {
@@ -38946,7 +38946,7 @@
 	},
 	"drj384": {
 		"zh-cn": " 圆形 ",
-		"en": "\"Circle\"",
+		"en": "Circle",
 		"zh-tw": "圓形"
 	},
 	"jrpnsf5": {
@@ -39021,7 +39021,7 @@
 	},
 	"nay284": {
 		"zh-cn": " 领取 ",
-		"en": "\"Claim",
+		"en": "Claim",
 		"zh-tw": "領取"
 	},
 	"y50ecr9": {
@@ -39046,7 +39046,7 @@
 	},
 	"67iedi7": {
 		"zh-cn": " * 最多上传",
-		"en": "\"Maximum uploads",
+		"en": "Maximum uploads",
 		"zh-tw": "* 最多上傳"
 	},
 	"i1xnpo8": {
@@ -39111,7 +39111,7 @@
 	},
 	"9sytcp6": {
 		"zh-cn": " 设置标签 ",
-		"en": "\"Set labels\"",
+		"en": "Set labels",
 		"zh-tw": "設置標籤"
 	},
 	"ojlg7c17": {
@@ -39161,22 +39161,22 @@
 	},
 	"6wq5ae5": {
 		"zh-cn": " 【商品】",
-		"en": "\"Product",
+		"en": "Product",
 		"zh-tw": "【商品】"
 	},
 	"6ye7265": {
 		"zh-cn": " 【店铺】",
-		"en": "\"Shop",
+		"en": "Shop",
 		"zh-tw": "【店鋪】"
 	},
 	"o3d34r8": {
 		"zh-cn": " 【自定义页面】",
-		"en": "\"Custom Page",
+		"en": "Custom Page",
 		"zh-tw": "【自定義頁面】"
 	},
 	"6wfrm45": {
 		"zh-cn": " 【分类】",
-		"en": "\"Category",
+		"en": "Category",
 		"zh-tw": "【分類】"
 	},
 	"tss7ot6": {
@@ -39186,7 +39186,7 @@
 	},
 	"qvh15t1d": {
 		"zh-cn": " ( 导航说明：导航菜单数量限制为8，不过建议根据实际菜单名称的长度，选择性显示导航菜单数量。) ",
-		"en": "(Navigation Description: The number of navigation menus is limited to 8. However, it is recommended to selectively display the number of navigation menus based on the actual length of the menu names.)\"",
+		"en": "(Navigation Description: The number of navigation menus is limited to 8. However, it is recommended to selectively display the number of navigation menus based on the actual length of the menu names.)",
 		"zh-tw": "( 導航說明：導航菜單數量限制爲8，不過建議根據實際菜單名稱的長度，選擇性顯示導航菜單數量。)"
 	},
 	"ttg5oo6": {
@@ -39206,12 +39206,12 @@
 	},
 	"g26fz4": {
 		"zh-cn": " 收起 ",
-		"en": "\"Collapse",
+		"en": "Collapse",
 		"zh-tw": "收起"
 	},
 	"ejggl4": {
 		"zh-cn": " 展开 ",
-		"en": "\"Unfold",
+		"en": "Unfold",
 		"zh-tw": "展開"
 	},
 	"17fg2v8": {
@@ -39221,7 +39221,7 @@
 	},
 	"3t0exn7": {
 		"zh-cn": " 【自定义页】",
-		"en": "\"Custom Page",
+		"en": "Custom Page",
 		"zh-tw": "【自定義頁】"
 	}
 }
