--- a/src/i18n/lang/index.json
+++ b/src/i18n/lang/index.json
@@ -39388,5 +39388,65 @@
 		"zh-cn": " 发票",
 		"en": "Invoice",
 		"zh-tw": "發票"
+	},
+	"d2lr4n4": {
+		"zh-cn": "提现审核",
+		"en": "Withdrawal review",
+		"zh-tw": "提現審覈"
+	},
+	"usgt7ea": {
+		"zh-cn": "确认通过此提现申请？",
+		"en": "Confirm the approval of this withdrawal application?",
+		"zh-tw": "確認通過此提現申請？"
+	},
+	"7ln96wa": {
+		"zh-cn": "确认拒绝此提现申请？",
+		"en": "Confirm the rejection of this withdrawal application?",
+		"zh-tw": "確認拒絕此提現申請？"
+	},
+	"ljbvbz7": {
+		"zh-cn": "请输入审核备注",
+		"en": "Please enter the review remarks",
+		"zh-tw": "請輸入審覈備註"
+	},
+	"49c8r56": {
+		"zh-cn": "备注不能为空",
+		"en": "The remarks cannot be left blank",
+		"zh-tw": "備註不能爲空"
+	},
+	"uf2qh06": {
+		"zh-cn": " 导出数据 ",
+		"en": "Export data",
+		"zh-tw": "導出數據"
+	},
+	"3f78rzf": {
+		"zh-cn": "提现申请提交成功！提现金额：￥",
+		"en": "The withdrawal application has been submitted successfully! Withdrawal amount: ￥",
+		"zh-tw": "提現申請提交成功！提現金額：￥"
+	},
+	"i38t6zu": {
+		"zh-cn": "提现申请已提交，请等待审核。您可以在下方列表中查看提现记录。",
+		"en": "The withdrawal application has been submitted. Please wait for the review. You can view the withdrawal records in the list below.",
+		"zh-tw": "提現申請已提交，請等待審覈。您可以在下方列表中查看提現記錄。"
+	},
+	"vffl8fc": {
+		"zh-cn": "提现申请提交失败，请重试",
+		"en": "The withdrawal application was submitted failed. Please try again",
+		"zh-tw": "提現申請提交失敗，請重試"
+	},
+	"b4r2val": {
+		"zh-cn": "提现申请提交失败，请检查网络连接或联系客服",
+		"en": "The withdrawal application was submitted failed. Please check your network connection or contact customer service",
+		"zh-tw": "提現申請提交失敗，請檢查網絡連接或聯繫客服"
+	},
+	"d2ul1n4": {
+		"zh-cn": "提现进度",
+		"en": "Withdrawal progress",
+		"zh-tw": "提現進度"
+	},
+	"cjbhr24": {
+		"zh-cn": "店铺id",
+		"en": "Shop id",
+		"zh-tw": "店鋪id"
 	}
 }
