ui(custom): 商品列表列表字段变更

--- a/src/i18n/lang/index.json
+++ b/src/i18n/lang/index.json
@@ -40748,5 +40748,10 @@
 		"zh-cn": "总部销售状态",
 		"en": "Sales status at the headquarters",
 		"zh-tw": "總部銷售狀態"
+	},
+	"padf9r6": {
+		"zh-cn": "总部审核状态",
+		"en": "",
+		"zh-tw": ""
 	}
 }
